feat(apps): Add wikijs

--- a/values/gatus.yaml
+++ b/values/gatus.yaml
@@ -374,3 +374,7 @@ config:
       <<: *default
       url: https://moodist.plcnk.home
       group: 8. Kube Services
+    - name: Wiki.js
+      <<: *default
+      url: https://wiki.plcnk.home
+      group: 8. Kube Services
