--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -76,3 +76,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: test
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: wikijs
+  labels:
+    prometheus-scrape: "true"
