--- a/manifests/wikijs/kustomization.yaml
+++ b/manifests/wikijs/kustomization.yaml
@@ -1,10 +1,9 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: authentik
+namespace: wikijs
 resources:
   - backup-cnpg.yaml
   - cert.yaml
-  - cnpg-authentik.yaml
+  - cnpg-wikijs.yaml
   - sealed-aws-creds.yaml
-  - sealed-secret-key.yaml
