--- a/values/wikijs.yaml
+++ b/values/wikijs.yaml
@@ -56,6 +56,7 @@ controllers:
               secretKeyRef:
                 name: cnpg-wikijs-app
                 key: password
+          NODE_EXTRA_CA_CERTS: /certs/plcnk-root.crt
 
         securityContext:
           # -- Mount the container's root filesystem as read-only
@@ -102,6 +103,17 @@ data:
   storageClass: ""
   accessMode: ReadWriteOnce
   size: 8Gi
+
+persistence:
+  certs:
+    enabled: true
+    type: configMap
+    name: plcnk-ca
+    advancedMounts:
+      main:
+        app:
+          - path: /certs/plcnk-root.crt
+            subPath: plcnk-root.crt
 
 ingress:
   # -- Enable and configure ingress settings for the chart under this key.
