feat(vaultwarden): Create base manifests

--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -88,3 +88,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cloudflared
+---
+apiVersion: 1
+kind: Namespace
+metadata:
+  name: vaultwarden
+  labels:
+    prometheus-scrape: "true"
