fix(namespace): Fix apiVersion

--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -89,7 +89,7 @@ kind: Namespace
 metadata:
   name: cloudflared
 ---
-apiVersion: 1
+apiVersion: v1
 kind: Namespace
 metadata:
   name: vaultwarden
