feat(cnpg): Disable immediate backup

--- a/manifests/authentik/backup-cnpg.yaml
+++ b/manifests/authentik/backup-cnpg.yaml
@@ -4,7 +4,7 @@ kind: ScheduledBackup
 metadata:
   name: backup-cnpg-authentik
 spec:
-  immediate: true
+  immediate: false
   schedule: "0 0 1 * * *"
   backupOwnerReference: self
   cluster:
