feat(semaphore): Initial installation

--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -95,3 +95,10 @@ metadata:
   name: vaultwarden
   labels:
     prometheus-scrape: "true"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: semaphore
+  labels:
+    prometheus-scrape: "true"
