--- a/argocd-apps/kustomization.yaml
+++ b/argocd-apps/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ./prometheus-stack
   - ./rancher
   - ./sealed-secrets
+  - ./semaphore
   - ./unifi
   - ./vaultwarden
   - ./wikijs
