fix(semaphore): Change host variable

--- a/values/semaphore.yaml
+++ b/values/semaphore.yaml
@@ -144,7 +144,7 @@ secrets:
 
 general:
   # -- Host to access Semaphore
-  host: semaphore.plcnk.home
+  host: https://semaphore.plcnk.home
 
   # -- Use Git client implementation
   gitClient: cmd_git
