--- a/argocd-apps/gatus/application.yaml
+++ b/argocd-apps/gatus/application.yaml
@@ -9,9 +9,9 @@ spec:
     server: https://kubernetes.default.svc
   sources:
     # Chart from chart repo
-    - repoURL: https://minicloudlabs.github.io/helm-charts
+    - repoURL: https://twin.github.io/helm-charts
       chart: gatus
-      targetRevision: 3.4.5
+      targetRevision: 1.0.0
       helm:
         valueFiles:
           - $values/values/gatus.yaml
