test(semaphore): Env variable

--- a/values/semaphore.yaml
+++ b/values/semaphore.yaml
@@ -316,7 +316,8 @@ envFromSecrets: []
 envFromConfigMaps: []
 
 # -- Extra environment variables from mapping
-extraEnvVariables: {}
+extraEnvVariables:
+  GIT_SSL_NO_VERIFY: "true"
 
 # -- Extra environment variables from secrets
 extraEnvSecrets: {}
