fix(prom-stack): Fix PodMonitor scrape

--- a/values/prometheus-stack.yaml
+++ b/values/prometheus-stack.yaml
@@ -3664,9 +3664,8 @@ prometheus:
     ## To remove the release label from the matchLabels condition, explicit set release to null.
     ## If null, exclude the field from the prometheusSpec (keeping downward compatibility with older versions of CRD)
     ##
-    podMonitorSelector:
-      matchLabels:
-        release: "{{ $.Release.Name }}"
+    podMonitorSelector: {}
+
     ## Example which selects PodMonitors with label "prometheus" set to "somelabel"
     # podMonitorSelector:
     #   matchLabels:
